bdr.BDR.scala.error
Erreur de compilation :
BDR:7: error: identifier expected but '}' found.
  }
  ^